--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,9 @@ input[type=search] {
   list-style-type: none;
   width: 190px;
   padding-bottom: 30px;
+  margin-left: auto;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .number-btn li{
