--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,12 @@ body {
   margin: 0;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  }
+
 h1 {
   font-size: 35px;
   line-height: 41px;
@@ -51,7 +57,6 @@ h1 {
 
 .main-navigation-1 {
   display: flex;
-  list-style-type: none;
   margin-left: 29px;
   margin-right: 33px;
   margin-top: 14px;
@@ -79,7 +84,6 @@ h1 {
 
 .buttons ul{
   display: flex;
-  list-style-type: none;
 }
 
 input[type=search] {
@@ -172,10 +176,6 @@ input[type=search] {
   width: 560px;
 }
 
-.footer-references ul {
-  list-style-type: none;
-}
-
 /* Каталог */
 .item-form {
   display: none;
@@ -192,7 +192,6 @@ input[type=search] {
 .number-btn {
   display: flex;
   justify-content: space-between;;
-  list-style-type: none;
   width: 190px;
   padding-bottom: 30px;
   margin-left: auto;
