--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,15 @@ ul {
   list-style-type: none;
   }
 
+li {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none; 
+}
+
 h1 {
   font-size: 35px;
   line-height: 41px;
